# dfm

./: .gitignore  Cargo.toml  README.md
src/: crypt.rs  lib.rs  main.rs  main_tests.rs
src/commands/: add.rs  config.rs  forget.rs  ignore.rs  init.rs  mod.rs  paths.rs  pull.rs  purge.rs  tests.rs
tests/: README.md  launcher.sh  test_add_all_files.sh  test_add_and_pull_file.sh  test_add_and_pull_regular_file.sh  test_add_bad_path.sh  test_add_both_modified.sh  test_add_directory.sh  test_add_dry_run.sh  test_add_encrypt_for_symlink_fails.sh  test_add_encrypt_plain_source_both_modified.sh  test_add_encrypt_plain_source_modified.sh  test_add_encrypt_with_plain_source.sh  test_add_encrypted_directory.sh  test_add_encrypted_file.sh  test_add_encrypted_when_source_modified.sh  test_add_force_encryption_config.sh  test_add_inside_source_dir.sh  test_add_modified_file.sh  test_add_never_synchronized.sh  test_add_nothing_to_do.sh  test_add_outside_target_dir.sh  test_add_symlink.sh  test_add_symlink_already_managed.sh  test_add_symlink_encrypt_force.sh  test_add_symlink_ignored.sh  test_add_symlink_pointee_in_source.sh  test_add_symlink_regular_file.sh  test_add_symlink_repoint.sh  test_add_unchanged_file.sh  test_dont_pull_to_symlink.sh  test_forget_b3a1d_read_link_fails.sh  test_forget_both_modified.sh  test_forget_broken_symlink.sh  test_forget_by_source_dir.sh  test_forget_by_source_path.sh  test_forget_d2_remove_fails.sh  test_forget_dry_run.sh  test_forget_e1_invariant.sh  test_forget_encrypted_file.sh  (+57 more)
