[package]
authors = ["ayrapetovai"]
name = "dfm"
version = "0.1.0"
edition = "2021"

[dependencies]
microxdg = "0.1.2"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
clap_mangen = "0.2.20"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13"
envmnt = "0.10.4"
filetime_creation = "0.2.0"
walkdir = "2.5.0"
regex = "1.10.4"
symlink = "0.1.0"
log = "0.4.21"
stderrlog = "0.6.0"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "fat"
