[package]
authors = ["ayrapetovai"]
name = "dfm"
version = "0.1.0"
edition = "2024"

[dependencies]
microxdg = "0.2.0"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
clap_mangen = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_regex = "1.2.0"
toml = "1.1.2"
envmnt = "0.10.4"
filetime_creation = "0.2.0"
walkdir = "2.5.0"
regex = "1.12.4"
symlink = "0.1.0"
log = "0.4.33"
stderrlog = "0.6.0"
rpassword = "7.5.4"
thiserror = "2"
aead = "0.6.1"
once_cell = "1.21.4"
sealed_test = "1.1.0"
lazy_static = "1.4"
zip = { version="8.6.0", default-features = false, features=["bzip2", "aes-crypto"] }

[profile.release]
panic = "abort"
opt-level = "s"
lto = "fat"
